# qt_gui_workspace

devel/: .catkin  .rosinstall  local_setup.sh
devel/lib/gui/: gui
devel/lib/pkgconfig/: gui.pc  ros_video_components.pc
devel/share/gui/cmake/: guiConfig.cmake
devel/share/ros_video_components/cmake/: ros_video_componentsConfig.cmake
src/gui/: CMakeLists.txt  guiMain.cpp  package.xml  window1.qml
src/gui/include/gui/: mainapplication.h
src/gui/resources/: Screen01.qml  Screen01Form.ui.qml  owrroscomponents.h  qml.qrc  rosvideocomponent.h  window1.qml
src/gui/resources/src/: owrroscomponents.cpp
src/gui/src/: guiMain.cpp  mainapplication.cpp
src/ros_video_components/: CMakeLists.txt
src/ros_video_components/src/: rosvideocomponent.cpp
